[tool.poetry]
name = "freebox-api"
version = "0.0.9"
description = "Provides asynchronous authentication and access to Freebox servers"
authors = ["stilllman <luc_touraille@yahoo.fr>", "quentame <polletquentin74@me.com>", "HACF <contact@hacf.fr>"]
license = "GNU GPL v3"
readme = "README.rst"
homepage = "https://github.com/hacf-fr/freebox-api"
repository = "https://github.com/hacf-fr/freebox-api"
documentation = "https://freebox-api.readthedocs.io"
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Home Automation",
]
keywords=['freebox', 'async']

[tool.poetry.urls]
Changelog = "https://github.com/hacf-fr/freebox-api/releases"

[tool.poetry.dependencies]
python = "^3.7.0"
aiohttp = ">=3,<4"
importlib-metadata = {version = "^3.3.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
coverage = {extras = ["toml"], version = "^5.3"}
safety = "^1.10.0"
mypy = "^0.812"
typeguard = "^2.11.1"
xdoctest = "^0.15.0"
sphinx = "^3.5.2"
sphinx-autobuild = "^2020.9.1"
pre-commit = "^2.11.1"
flake8 = "^3.9.0"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.3.2"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
darglint = "^1.7.0"
reorder-python-imports = "^2.4.0"
pre-commit-hooks = "^3.4.0"

[tool.poetry.scripts]
freebox_api = "freebox_api.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["freebox_api"]

[tool.coverage.report]
show_missing = true
# fail_under = 100 reduce targetwaiting for tests creation
fail_under = 40

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
