[tool.poetry]
name = "freebox-api"
version = "1.0.1"
description = "Provides asynchronous authentication and access to Freebox servers"
authors = ["stilllman <luc_touraille@yahoo.fr>", "quentame <polletquentin74@me.com>", "HACF <contact@hacf.fr>"]
license = "GNU GPL v3"
readme = "README.rst"
homepage = "https://github.com/hacf-fr/freebox-api"
repository = "https://github.com/hacf-fr/freebox-api"
documentation = "https://freebox-api.readthedocs.io"
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Home Automation",
]
keywords=['freebox', 'async']

[tool.poetry.urls]
Changelog = "https://github.com/hacf-fr/freebox-api/releases"

[tool.poetry.dependencies]
python = "^3.7.4"
urllib3 = "^1.26.6"
aiohttp = ">=3,<4"
importlib-metadata = {version = ">=3.3,<5.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
coverage = {extras = ["toml"], version = "^6.0"}
safety = "^2.3.1"
mypy = "^0.982"
typeguard = "^2.13.0"
xdoctest = {extras = ["colors"], version = "^1.1.0"}
sphinx = "^4.2.0"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.15.0"
flake8 = "^5.0.4"
black = "^22.1.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^22.9.23"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.7"
pep8-naming = "^0.13.2"
darglint = "^1.8.1"
reorder-python-imports = "^3.8.4"
pre-commit-hooks = "^4.0.1"

[tool.poetry.scripts]
freebox_api = "freebox_api.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["freebox_api"]

[tool.coverage.report]
show_missing = true
# fail_under = 100 reduce targetwaiting for tests creation
fail_under = 40

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
